@@ -9,6 +9,6 @@ class BasicExtension < Radiant::Extension
   end
   
   def activate
-    admin.nav['Content'] << admin.nav_item(:basic, "Basic Extension Tab", "/admin/basic")
+    tab('Content').add_item("Basic Extension Tab", "/admin/basic")
   end
 end
